fix buttons on mobile

--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -17,8 +17,9 @@
 .button-container {
   .btn {
     &:not(:first-of-type) {
-      margin-left: 20px;
+      margin-top: 20px;
     }
+    margin-right: 20px;
   }
 }
 
